# rust-gantt-diagram

./: Cargo.toml  README.md
public/: index.html
public/static/css/: common.css
public/static/js/: Application.js  Components.js  Storage.js  Target.js  Util.js  init.js
public/static/js/bindings/: GanttChart.js
public/static/js/components/: Chart.html  Chart.js  Connect.html  Connect.js  Settings.html  Settings.js
src/: main.rs  options.rs  server.rs
src/database/: error.rs  mod.rs
src/database/sql/: data.sql  databases.sql  stages.sql
src/handlers/: data.rs  databases.rs  mod.rs  stages.rs  util.rs
src/handlers/data/: mod.rs  tempfile.rs
