[package]
name = "gantt-diagram"
version = "0.1.0"
authors = ["snake"]
edition = "2018"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
env_logger = "0.5"
iron = "0.6"
log = "0.4"
mount = "0.4"
postgres = "0.15"
router = "0.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
staticfile = "0.5"
structopt = "0.2"
time = "0.1"
